# kirograph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN-engram-features.md  PLAN-wiki.md  PLAN.md  README.md  SECURITY.md  package-lock.json  package.json  watchmen-plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: changelog.html  cli.html  docs.html  index.html  mcp-tools.html  style.css
docs/guide/: cli.md  comparison.md  configuration.md  how-it-works.md  installation.md  mcp-tools.md
native/turbovec-node/: .gitignore  Cargo.toml  index.js  package.json
native/turbovec-node/src/: lib.rs
scripts/: copy-assets.js  postinstall.js
scripts/mem/: test.sh
scripts/pixelrag/: test.sh
scripts/sec/: test.sh
scripts/turbovec/: test.sh
src/: banner.ts  config.ts  errors.ts  index.ts  types.ts  utils.ts
src/compression/: index.ts  naive-cost.ts  tracker.ts  types.ts
src/context/: index.ts
src/core/: lock-manager.ts  pipeline.ts
src/data/: pixelrag-bridge.ts  pixelrag-manager.ts  types.ts
src/db/: database.ts  memory-schema.sql  schema.sql
src/extraction/: extractor.ts  grammars.ts  languages.ts  notebook.ts
src/frameworks/: csharp.ts  elixir.ts  express.ts  flutter.ts  go.ts  index.ts  java.ts  laravel.ts  python.ts  react.ts  ruby.ts  rust.ts  svelte.ts  swift.ts  types.ts
src/graph/: communities.ts  queries.ts  traversal.ts
src/hooks/: manager.ts
src/installer/: index.ts
src/mcp/: server.ts  tool-names.ts  tools.ts  transport.ts
src/memory/: database.ts  index.ts  types.ts
(+33 files in other folders)
